fix image proportion and link spacing

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -114,6 +114,7 @@ h4 {
 .learn_more {
     display: block;
     font-size: 115%;
+    margin-top: 8px;
 }
 
 .game_image {
@@ -165,6 +166,10 @@ h4 {
     border-radius: 10px;
     cursor: pointer;
     margin: 7px;
+}
+
+#breaddash {
+    height: 345px;
 }
 
 .game_container:hover {
